--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "To help King Shan find Al Falcone",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --config ./webpack/webpack.dev.config.js"
+    "dev": "webpack-dev-server --config ./webpack/webpack.dev.config.js",
+    "start": "node ./bin/www"
   },
   "repository": {
     "type": "git",
@@ -22,14 +22,25 @@
   },
   "homepage": "https://github.com/scsiva1991/findingFalcone#readme",
   "dependencies": {
+    "axios": "^0.17.1",
+    "bootstrap": "^3.3.7",
+    "consolidate": "^0.15.0",
+    "debug": "^3.1.0",
+    "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
     "font-awesome": "^4.7.0",
+    "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
-    "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.1"
+    "react-redux": "^5.0.7",
+    "react-redux-toastr": "^7.2.3",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-connect": "^7.0.0",
+    "redux-thunk": "^2.2.0"
   },
   "babel": {
     "presets": [
@@ -45,6 +56,7 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -52,7 +64,10 @@
     "babel-register": "^6.26.0",
     "css-loader": "^0.28.9",
     "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.20.2",
-    "sass-loader": "^6.0.6"
+    "webpack": "^3.11.0",
+    "webpack-dev-middleware": "^2.0.6",
+    "webpack-hot-middleware": "^2.21.0"
   }
 }
